--- a/TestJsAngDotNet/Views/Home/Index.cshtml
+++ b/TestJsAngDotNet/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
         <select selector
                 model="element"
 	            options="elements"
-                label-attr="name">
+                value-attr="id"
+                label-attr="name" >
         </select>
 
         <input ng-model="elementInfo.text1">
